# Cpp_Backtesting_Engine

./: .gitignore  CMakeLists.txt  README.md
data/: AAPL.csv  SPY.csv
include/: Bar.h  DataHandler.h  Event.h  EventQueue.h  ExecutionHandler.h  PerformanceMetrics.h  Portfolio.h  Strategy.h
src/: DataHandler.cpp  ExecutionHandler.cpp  PerformanceMetrics.cpp  Portfolio.cpp  Strategy.cpp  main.cpp
tools/: fetch_data.cpp  generate_sample_data.cpp
